--- a/History.txt
+++ b/History.txt
@@ -30,4 +30,9 @@
 2.4.3     2018-07-16 Ronald Bode  $Null output in expression [ScriptBlock]
 2.4.4     2018-07-18 Ronald Bode  Different string manipulation (experimental branch)
 2.4.5     2018-08-01 Ronald Bode  Return Expression (containing $Null) when input is $Null
-2.4.5     2018-08-02 Ronald Bode  Preserving embedded empty arrays 
+2.4.6     2018-08-02 Ronald Bode  Preserving embedded empty arrays
+2.5.0     2018-08-09 Ronald Bode  Using TypeAccelerators and Type.FullName rather than bare Type.Name
+2.5.1     2018-08-09 Ronald Bode  [Void] unknown types
+2.5.2     2018-08-09 Ronald Bode  Added [RuntimeTypeHandle]
+2.5.3     2018-08-10 Ronald Bode  Fixed: ScriptBlock not closed if the last line is a #Remark
+2.6.0     2018-08-28 Ronald Bode  Fixed empty array `@()` result and simplified recursive calls
