--- a/CHANGELOG
+++ b/CHANGELOG
@@ -54,7 +54,7 @@
 3.0.9     2019-01-05 Ronald Bode Removed PSON references and aliases
 3.1.0     2019-01-05 Ronald Bode Replaced -TypePrefix parameter with -Strong and -Explore switch
 3.1.1     2019-01-07 Ronald Bode Fixed embedded PSCustomObject issue due to recurring reference tracking
-3.2.0     2019-05-14 Ronald Bode Recode better recognising object containers
+3.2.0     2019-05-14 Ronald Bode Recode better recognizing object containers
 3.2.1     2019-05-21 Ronald Bode Using unary comma operator
 3.2.2     2019-05-21 Ronald Bode List arrays without brackets where possible
 3.2.3     2019-05-28 Ronald Bode Removed extra linefeed after here string
@@ -62,3 +62,4 @@
 3.2.7     2019-06-11 Ronald Bode Used PowerShell Accelerators rather than .Net
 3.2.8     2019-06-18 Ronald Bode Handling streamed object as individual objects
 3.2.9     2019-06-25 Ronald Bode No trailing space in any lines
+3.2.10    2019-06-25 Ronald Bode Preserve object property orders
