--- a/CHANGELOG
+++ b/CHANGELOG
@@ -67,3 +67,5 @@
 3.2.12    2019-08-29 Ronald Bode Support for SemVer type
 3.2.13    2019-08-29 Ronald Bode Using .isPrimitive property rather than numeric type table 
 3.2.15    2019-10-18 Ronald Bode Support for valued arrays (use -Strong)
+3.2.17    2019-10-19 Ronald Bode Added support for 'mailaddress', 'Regex', 'Type', 'Version', 'Uri'
+3.2.17    2019-10-19 Ronald Bode Support Credential and SecureString
