--- a/CHANGELOG
+++ b/CHANGELOG
@@ -69,3 +69,5 @@
 3.2.15    2019-10-18 Ronald Bode Support for valued arrays (use -Strong)
 3.2.17    2019-10-19 Ronald Bode Added support for 'mailaddress', 'Regex', 'Type', 'Version', 'Uri'
 3.2.19    2019-10-19 Ronald Bode Support Credential and SecureString
+3.2.20    2020-03-20 Ronald Bode Removed (unused) -Concatenate switch
+3.3.0     2020-03-20 Ronald Bode Removed all statements that could exploit for code injection
