--- a/CHANGELOG
+++ b/CHANGELOG
@@ -76,4 +76,5 @@
 3.3.3     2020-08-27 Ronald Bode Changed default indent tab character to 4 spaces
 3.3.4     2020-08-27 Ronald Bode Remove quotes in HashTables Keys when possible (https://github.com/iRon7/ConvertTo-Expression/issues/3)
 3.3.5     2020-08-27 Ronald Bode https://github.com/DTW-DanWard/PowerShell-Beautifier (and corrected spaces behind commas)
-3.3.6     2020-08-27 Ronald Bode Fixed #5 ADSI unknown type
+3.3.6     2020-11-02 Ronald Bode Fixed #5 ADSI unknown type in operating systems other than windows
+3.3.7     2020-11-16 Ronald Bode Implemented #6 Consider preserving specific collection types, if they can be initialized from arrays
